# diception

./: .gitignore  CLAUDE.md  ELECTRON_PLAN.md  LICENSE  README.md  electron-main.cjs  electron-preload.js  entitlements.mac.plist  index.html  package-lock.json  package.json  pad.html  styles.css  test.js  test_sim.js  vite.config.js
.github/workflows/: android.yml  build.yml  delete-branch.yml  deploy-dev.yml  deploy-prod.yml  deploy-qa.yml  deploy.yml  electron.yml  ftp.yml  itch.yml  production.yml  release.yml  steam.yml  tauri.yml
backend/: delete.php  get_settings.php  list.php  settings.json  update_settings.php  upload.php
backend/admin/: index.html
backend/data/: fook.json  fook_69761769647e8.json  fook__91f92_.json  map_fook_6e02f.json  muellkollektion.json
backend/padz/: controller.html  controller.js  example.html  example.js  fwapplication.js  fwnetwork.js  fwnetworkgamepad.js  fwtouchcontrol.js  index.html  peerjs.min.js  pixi.js  qr.js  site.webmanifest
docs/: ACHIEVEMENTS.md  ANDROID_UNLOCK.md  CAMPAIGNS.md  CAMPAIGN_SYSTEM.md  PIXIJS.md  REPLAY_FORMAT.md  STEAM.md  colors.html
electron/: main.js  preload.js
public/: icon.icns  site.webmanifest
public/gfx/: diception.json  sprites.css
scripts/: StorePlugin.kt  android-main-activity.patch  bundle-steam-assets.js  colors.html  convert-builtins.mjs  copy-steam-sdk.js  electron-postbuild.js  export-graphics.html  export-sounds.html  fetch-amazon-sdk.js  fetch-steam-sdk.js  generate-css.js  generate-web-icons.js  spritesheet.tps  steam_achievements.html  steam_assets.html
scripts/amazon-iap-stubs/: iap.kt  model.kt
src/: cheat.js  deprecated.js  main.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/audio/: sound-manager.js
src/core/: achievement-manager.js  achievements.js  ai-registry.js  ai-runner.js  ai.js  combat.js  constants.js  game-starter.js  game.js  lifetime-stat-cap.js  map.js  probability.js  (+8 more)
steam/: app_build.vdf  app_build_linux.vdf  app_build_mac.vdf  app_build_win.vdf  depot_build_linux.vdf  depot_build_mac.vdf  depot_build_win.vdf  game_actions_X.vdf  upload_steam.sh
(+87 files in other folders)
