[package]
name = "diception"
version = "0.1.0"
description = "A fast-paced, neon-styled dice strategy game. Inspired by the tactical depth of DiceWars and Kdice, Diception delivers quick turns and intense territory conquest."
authors = ["Alexander Thurn"]
license = "GPL-3.0-or-later"
repository = "https://github.com/alexanderthurn/diception"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
steamworks = "0.12"

[profile.release]
panic = "abort"   # Verringert die Größe, indem im Fehlerfall sofort abgebrochen wird
codegen-units = 1 # Erlaubt dem Compiler bessere Optimierungen (dauert länger beim Bauen)
lto = true        # "Link Time Optimization" – macht die Datei kleiner und schneller
strip = true      # ENTFERNT alle unnötigen Debug-Symbole (macht die Datei massiv kleiner)
opt-level = "z"   # Optimiert auf Dateigröße ("s" oder "z" sind gut für kleine Binaries)
